--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Frequency table of classed(grouped) data
 <table id='displayIntervals'></table>
 Optional Percentile(Choose "calculate percentile" to use this)<input id='percentile' size=8/>
 <br>
-<h2>Output</h2><button id='gout'>Analyse Grouped Data</button><button id='outit'>Analyse Data</button><button id='percentilec'>Calculate percentile(input above)</button><br><br>
+<h2>Output</h2><button id='gout'>Analyse Grouped Data</button><button id='outit'>Analyse Raw Data</button><button id='percentilec'>Calculate percentile(input above)</button><br><br>
 <center><div id='output'></div></center>
 </body>
 </html>
